--- a/.env.example
+++ b/.env.example
@@ -2,25 +2,32 @@ APP_NAME="ALX | E-learning and Assessment Portal"
 APP_ENV=local
 APP_KEY=base64:d8Pk/FDmAN1nBHR83Np3mG3Ks4+b/2wEQCWhSSPvwsY=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:9000
+APP_URL=http://127.0.0.1:8000
+APP_LOGO="/images/logo.png"
 
 MIX_ENV_MODE="development"
 MIX_APP_URL=${APP_URL}
 MIX_APP_NAME=${APP_NAME}
-#Switch based on production(afchub.org) or development(127.0.0.1:8000) and run 'npm run dev' before deploying
-#MIX_API_URL=http://127.0.0.1:8000
-MIX_API_URL=https://afchub.org
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#local
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=afc-brace
+DB_DATABASE=alx-elearning-assessment
 DB_USERNAME=root
 DB_PASSWORD=
+
+#production
+#DB_CONNECTION=mysql
+#DB_HOST=brainboost-elearning.cxcytv2phcmq.eu-central-1.rds.amazonaws.com
+#DB_PORT=3306
+#DB_DATABASE=brainboost_elearning_db
+#DB_USERNAME=emekambachu
+#DB_PASSWORD=Xeddtech_1990
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
